Внести изменения в старые тесты.